opa/library/constraints/pod-security-policy/allow-privilege-escalation/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: psp-allow-privilege-escalation-container
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    exemptImages: ["877085696533.dkr.ecr.af-south-1.amazonaws.com/*","800184023465.dkr.ecr.ap-east-1.amazonaws.com/*","602401143452.dkr.ecr.ap-northeast-1.amazonaws.co*m/","602401143452.dkr.ecr.ap-northeast-2.amazonaws.com/*","602401143452.dkr.ecr.ap-northeast-3.amazonaws.com/*","602401143452.dkr.ecr.ap-south-1.amazo*naws.com/","900889452093.dkr.ecr.ap-south-2.amazonaws.com/*","602401143452.dkr.ecr.ap-southeast-1.amazonaws.com/*","602401143452.dkr.ecr.ap-southeast-*2.amazonaws.com/","29657839991 [...]
